--- a/Main.Master
+++ b/Main.Master
@@ -54,8 +54,8 @@
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         }
 
-        #btnSearh{
-            width:100%;
+        #btnSearh {
+            width: 100%;
         }
 
         /*漢堡選單*/
@@ -74,12 +74,13 @@
         #space {
             height: 39.0167px;
         }
+
         #offcanvasLeft {
             background: red; /* For browsers that do not support gradients */
-        background: -webkit-linear-gradient(left top, #0F0016 , #212B36); /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(bottom right, #0F0016, #212B36);  /*For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(bottom right, #0F0016, #212B36);  /*For Firefox 3.6 to 15 */
-        background: linear-gradient(to bottom right, #0F0016, #212B36); /* Standard syntax */
+            background: -webkit-linear-gradient(left top, #0F0016, #212B36); /* For Safari 5.1 to 6.0 */
+            background: -o-linear-gradient(bottom right, #0F0016, #212B36); /*For Opera 11.1 to 12.0 */
+            background: -moz-linear-gradient(bottom right, #0F0016, #212B36); /*For Firefox 3.6 to 15 */
+            background: linear-gradient(to bottom right, #0F0016, #212B36); /* Standard syntax */
         }
 
         /*左收合母列表的尺寸*/
@@ -89,7 +90,7 @@
             width: 250px;
             border-right: 1px solid rgba(0, 0, 0, 0.2);
             transform: translateX(-100%);
-            scrollbar-darkshadow-color:ActiveBorder;
+            scrollbar-darkshadow-color: ActiveBorder;
         }
 
         /*PBArea:左側固定母列表*/
@@ -279,6 +280,7 @@
                                 <!-- xs.sm時隱藏，sm以上顯示，sm為4格，md為4格，lg為4格，置中-->
                                 <div class="d-none d-sm-block col-sm-4 col-md-4 col-lg-4  text-center ">
                                     <div class="MemberStatus">
+
                                         <asp:Button ID="btnwebLogin" runat="server" Text="登入" OnClick="btnwebLogin_Click" />
                                         <asp:PlaceHolder ID="plgMemberStatus" runat="server">
                                             <div class="memberstatusleft">
@@ -315,22 +317,23 @@
 
                                             <div class="memberstatuscenter">
                                                 <br />
-                                                <asp:Label ID="lblMember_NickName" runat="server" Text="Label"></asp:Label>
-                                                <br />
-                                                <asp:Label ID="lblMember_Account" runat="server" Text="Label"></asp:Label>
-                                                <br />
-                                                <asp:Label ID="lblMember_MemberStatus" runat="server" Text="Label"></asp:Label>
                                                 <br />
                                             </div>
 
                                             <div class="memberstatusright">
-
+                                                <asp:Button ID="btnwebLogout" runat="server" Text="登出" OnClick="btnLogout_Click" />
                                                 <asp:Image ID="imgMember_PicPath" runat="server" />
                                                 <br />
-                                                <asp:Button ID="lblMember_Change" runat="server" Text="資料變更" OnClick="lblMember_Change_Click" />
+                                                <asp:Button ID="lblMember_Change" runat="server" OnClick="lblMember_Change_Click" Text="🖍" />
 
-                                                <br />
-                                                <asp:Button ID="btnwebLogout" runat="server" Text="登出" OnClick="btnLogout_Click" />
+                                                <div class="memberinfo">
+                                                    <asp:Label ID="lblMember_NickName" runat="server" Text="Label"></asp:Label>
+                                                    <br />
+                                                    <asp:Label ID="lblMember_Account" runat="server" Text="Label"></asp:Label>
+                                                    <br />
+                                                    <asp:Label ID="lblMember_MemberStatus" runat="server" Text="Label"></asp:Label>
+                                                    <br />
+                                                </div>
 
                                             </div>
                                         </asp:PlaceHolder>
