--- a/css/main.css
+++ b/css/main.css
@@ -204,20 +204,85 @@ a {
         text-align: center;
     }
 
-#txtAccount, #txtPassword, #btnLogin, #ltlMessage, #btnLogout, #btnRegister {
+#txtAccount, #txtPassword, #ltlMessage, #btnLogout {
     background-color: white;
     color: black;
     font-family: Consolas;
     font-size: 22pt;
 }
 
-#btnLogin {
-    float: left;
-}
 
 #btnRegister {
     float: right;
+    background-color: white;
+    color: black;
+    font-family: Consolas;
+    font-size: 22pt;
 }
+
+#btnRegister {
+    background: linear-gradient(to right, gold, darkorange);
+    color: white;
+    --width: 100px;
+    --height: calc(var(--width) / 3);
+    width: var(--width);
+    height: var(--height);
+    text-align: center;
+    line-height: var(--height);
+    font-size: calc(var(--height) / 2.5);
+    font-family: sans-serif;
+    letter-spacing: 0.2em;
+    border: 1px solid darkgoldenrod;
+    border-radius: 2em;
+    transform: perspective(500px) rotateY(-15deg);
+    text-shadow: 6px 3px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+    position: relative;
+    overflow: hidden;
+}
+
+    #btnRegister:hover {
+        transform: perspective(500px) rotateY(15deg);
+        text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+
+    #btnRegister::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to right, transparent, white, transparent);
+        left: -100%;
+        transition: 0.5s;
+    }
+
+    #btnRegister:hover::before {
+        left: 100%;
+    }
+/*-------------------------------------------*/
+
+#btnLogin {
+    float: left;
+    color: black;
+    font-family: Consolas;
+    font-size: 22pt;
+    outline: 0;
+    background: #fff;
+    border: none;
+    transition: all .3s ease-out;
+    box-shadow: inset 0 -6px 0 0 rgba(0,0,0,.2), 1px 1px 0 0 #d98e20, 2px 2px 0 0 #d98e20, 3px 3px 0 0 #d98e20, 4px 4px 0 0 #d98e20, 5px 5px 0 0 #d98e20, 6px 6px 0 0 #d98e20, 7px 7px 0 0 #d98e20;
+}
+
+    #btnLogin:hover {
+        color: lightslategray;
+    }
+
+    #btnLogin:active {
+        color: burlywood;
+        box-shadow: inset 0 -4px 0 0 rgba(0,0,0,.2), 1px 1px 0 0 #d98e20, 2px 2px 0 0 #d98e20, 3px 3px 0 0 #d98e20, 4px 4px 0 0 #d98e20, 5px 5px 0 0 #d98e20;
+    }
 /*-------------------------------------------*/
 
 #btnwebLogin, #btnwebLogout {
@@ -274,21 +339,31 @@ a {
 }
 
 /*-------------------------------------------*/
-#lblMember_Change {
+.butt {
     float: right;
+}
+
+
+#lblMember_Change {
     margin-top: 35px;
-    margin-right: 10px;
     font-size: 24px;
     background-color: transparent;
     border: none;
 }
 
 .memberinfo {
-    text-align: center;
+    float: left;
+    margin-left: 20%;
+}
+
+#imgMember_PicPath {
+    border-radius: 50%;
+    border: 1px solid white;
+    width: 40px;
+    height: 40px;
 }
 
 #lblMember_NickName, #lblMember_Account, #lblMember_MemberStatus {
-    margin-left: 40%;
     float: left;
     color: #cce7f8;
     -webkit-animation: shining 0.5s alternate infinite;
@@ -305,13 +380,7 @@ a {
     }
 }
 /*-------------------------------------------*/
-#imgMember_PicPath {
-    border-radius: 50%;
-    border: 1px solid white;
-    width: 40px;
-    height: 40px;
-    margin-left:20%;
-}
+
 
 .MemberStatus {
     float: inherit;
