--- a/Main.Master
+++ b/Main.Master
@@ -22,6 +22,11 @@
         .bb {
             background-color: #100f10;
             z-index:-2;
+            left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+            position: fixed;
         }
         .span1 {
             color: white;   
@@ -148,7 +153,6 @@
 <body>
     <div class="row">
         <%--這是為了防止眼睛被閃蝦--%>
-        <div class="bb">
         <div class="container">
             <form id="form1" runat="server">
 
@@ -483,10 +487,9 @@
                     </div>
                 </asp:PlaceHolder>
             </form>
-
+            <div class="bb"></div>
             <video class="video" src="images/Final Work Lunar Tears ffff.mp4" autoplay muted loop></video>
         </div>
-            </div>
     </div>
     <script>
         var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
