--- a/Main.Master
+++ b/Main.Master
@@ -302,19 +302,19 @@
                                                     <button id="btnNotify" type="button" onclick="Notifytoggle();">🔔</button>
                                                     <div class="Notifytext">
                                                         <div class="Notifytextpos">
-                                                            <h3>通知：</h3>
+                                                            <h3>通知</h3>
                                                             <asp:Repeater ID="rptMemberFollows" runat="server" OnItemCommand="rptMemberFollows_ItemCommand">
                                                                 <ItemTemplate>
                                                                     <asp:Label ID="Label1" runat="server">
                                                                         <%--<a href="DisplayPost.aspx?CboardID=<%#Eval("CboardID")%>&PostID=<%#Eval("PostID")%>#<%#Eval("Floor")%>">--%>
                                                                         <asp:Button ID="Button1" runat="server" CommandName='<%#Eval("PostID")%>' CommandArgument='<%#Eval("CboardID")+" "+Eval("Floor")+" "+ Eval("PostID")%>' Text='<%# !(bool)Eval("Replied")
-                                                                ? Eval("PointID") == null 
-                                                                   ? Eval("LastEditTime") == null 
-                                                                        ? string.Format("新文章:「{0}」 {1}", Eval("Title"), Eval("PostDate", "{0:yyyy/MM/dd}")) 
-                                                                        : string.Format("新文章:「{0}」 {1}", Eval("Title"), Eval("LastEditTime", "{0:yyyy/MM/dd}"))
-                                                                    : Eval("LastEditTime") == null 
-                                                                        ? string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Eval("PostCotent"), Eval("PostDate", "{0:yyyy/MM/dd}"))
-                                                                        : string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Eval("PostCotent"), Eval("LastEditTime", "{0:yyyy/MM/dd}")) 
+                                                                ? Eval("PointID") == null
+                                                                   ? Eval("LastEditTime") == null
+                                                                        ? string.Format("新文章:「{0}」 {1}", ReplaceArticle(Eval("Title").ToString()), Eval("PostDate", "{0:yyyy/MM/dd}"))
+                                                                    : string.Format("新文章:「{0}」 {1}", ReplaceArticle(Eval("Title").ToString()), Eval("LastEditTime", "{0:yyyy/MM/dd}"))
+                                                                    : Eval("LastEditTime") == null
+                                                                        ? string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Replacereply(Eval("PostCotent").ToString()), Eval("PostDate", "{0:yyyy/MM/dd}"))
+                                                                        : string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Replacereply(Eval("PostCotent").ToString()), Eval("LastEditTime", "{0:yyyy/MM/dd}"))
                                                                 : ""%>'></asp:Button>
                                                                     </asp:Label>
                                                                     <br />
