--- a/css/main.css
+++ b/css/main.css
@@ -458,9 +458,8 @@ a {
     z-index: -999;
     border: none;
     height: 130px;
-    width: 300px;
+    width: 350px;
     background-color: white;
-    text-align: left;
     bottom: 30px;
     right: 50px;
     background: url("../images/reel2.png") no-repeat;
@@ -477,8 +476,11 @@ a {
 
     .Notifytext::-webkit-scrollbar {
         width: 12px; /* width of the entire scrollbar */
+        background-color: transparent; /* color of the scroll thumb */
     }
-
+    .Notifytext::-webkit-scrollbar-corner {
+        background-color: transparent; /* color of the scroll thumb */
+    }
     .Notifytext::-webkit-scrollbar-track {
         background: transparent; /* color of the tracking area */
     }
@@ -497,8 +499,13 @@ a {
 
     .Notifytext h3 {
         background-color: transparent;
-        color: blue;
-        font-size: 26px;
+        font-family: Microsoft JhengHei;
+        color: black;
+        font-size: 24px;
+        text-decoration: underline;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        font-family: sans;
+        color: #CA9651;
     }
 
     .Notifytext span {
